# rag-nlp-system

./: README.md  docker-compose.yml  pyproject.toml  readme.txt  requirements.txt
app/: main.py
app/api/: routes_admin.py  routes_ingest.py  routes_query.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/services/: chunker.py  embedder.py  generator.py  pipeline.py  reranker.py  retriever.py
app/utils/: loaders.py
data/raw/: intro_to_rag.txt
docker/: Dockerfile
scripts/: ingest.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_chunker.py  test_reranker.py  test_retriever.py
